--- a/index.html
+++ b/index.html
@@ -1,14 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Parcel Sandbox</title>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <link href="src/styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Bootstrap demo</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
+    <script src="src/index.js"></script>
+    <script
+      src="https://kit.fontawesome.com/71e1fd6e20.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
-    <h1>Hello Git!</h1>
+    <div class="container px-1 px-sm-4 py-5 mx-auto">
+      <div class="row d-flex justify-content-center">
+        <div class="card text-center pt-4 border-0">
+            <form class="d-flex" role="search" id="search-form">
+                <input 
+                type="text" 
+                role="search" 
+                placeholder="Search for a city" 
+                autofocus class="form-control me-2" 
+                aria-label="Search" 
+                id="city-input"
+                >  
+            <button type="submit" class="button-8" role="button">SUBMIT</button>
+           <span class="msg"></span> &nbsp;    
+            <div class="current-city">
+              <button id="current-city" type="button" class="button-26" >Current</button>
+            </div>
+          </form>       
+              <br /><h4 class="mb-0" id="city-name">Hong Kong</h4>
+          <small class="text-muted mb-3" id="current-date">Sunday 15:32</small>
+          
+          <div class="text-center ">
+            <img class="bigsymbol-img" src="https://raw.githubusercontent.com/basmilius/weather-icons/87a143a3ca6a50d8e9cbd0f38eb3f31d7cf48053/design/fill/final/clear-day.svg"></i>
+          </div>
+      
+         <div> <span class="large-font" id="current-temperature">29</span><span class="units"><span class="Celsius-units"><a href="#" id="Celsius">°C</a></span> | <span id="Fahrenheit-units"><a href="#" id="Fahrenheit">F</a></span></span></div>
+          <br /><div class="row d-flex px-3 mt-auto">
+            <div class="d-flex flex-column block first-block">
+              <small class="text-muted mb-0">MON</small>
+              <div class="text-center">
+                <img
+                  class="symbol-img"
+                  src="https://raw.githubusercontent.com/basmilius/weather-icons/87a143a3ca6a50d8e9cbd0f38eb3f31d7cf48053/design/fill/final/clear-day.svg"
+                />
+              </div>
+              <h6><strong>30&#176;</strong></h6>
+            </div>
+            <div class="d-flex flex-column block">
+              <small class="text-muted mb-0">TUE</small>
+              <div class="text-center">
+                <img
+                  class="symbol-img"
+                  src="https://raw.githubusercontent.com/basmilius/weather-icons/87a143a3ca6a50d8e9cbd0f38eb3f31d7cf48053/design/fill/final/rain.svg"
+                />
+              </div>
+              <h6><strong>29&#176;</strong></h6>
+            </div>
+            <div class="d-flex flex-column block active">
+              <small class="text-muted mb-0">WED</small>
+              <div class="text-center">
+                <img
+                  class="symbol-img"
+                  src="https://raw.githubusercontent.com/basmilius/weather-icons/87a143a3ca6a50d8e9cbd0f38eb3f31d7cf48053/design/fill/final/cloudy.svg"
+                />
+              </div>
+              <h6><strong>28&#176;</strong></h6>
+            </div>
+            <div class="d-flex flex-column block">
+              <small class="text-muted mb-0">THU</small>
+              <div class="text-center">
+                <img
+                  class="symbol-img"
+                  src="https://raw.githubusercontent.com/basmilius/weather-icons/87a143a3ca6a50d8e9cbd0f38eb3f31d7cf48053/design/fill/final/partly-cloudy-day.svg"
+                />
+              </div>
+              <h6><strong>29&#176;</strong></h6>
+            </div>
+            <div class="d-flex flex-column block last-block">
+              <small class="text-muted mb-0">FRI</small>
+              <div class="text-center">
+                <img
+                  class="symbol-img"
+                  src="https://raw.githubusercontent.com/basmilius/weather-icons/87a143a3ca6a50d8e9cbd0f38eb3f31d7cf48053/design/fill/final/clear-day.svg"
+                />
+              </div>
+              <h6><strong>29&#176;</strong></h6>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
+    <script src="src/index.js"></script>
   </body>
 </html>
