Pasted the correct code from sandbox

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>Parcel Sandbox</title>
     <meta charset="UTF-8" />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link href="src/styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bootstrap demo</title>
     <link
@@ -13,11 +12,12 @@
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     />
-    <script src="src/index.js"></script>
+    
     <script
       src="https://kit.fontawesome.com/71e1fd6e20.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="src/styles.css" />
   </head>
 
   <body>
