Updated bottom line

--- a/index.html
+++ b/index.html
@@ -102,17 +102,10 @@
         </div>
       </div>
     </div>
-  <div class="builtBy">
-    <p><small>This page was built by
-    <a
-      href="https://www.linkedin.com/in/karmen-y-67278a214"
-      target="_blank"
-      class="KarY">
-      Karmen Yip
-    </a>
-    </small>
-    </p>
-    </div>
+    <a href="https://github.com/whorunsthecode/shecodesplus-weather-app">
+          Open-source code</a
+        >
+        <span>by Karmen Yip</span>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
