--- a/index.html
+++ b/index.html
@@ -102,10 +102,11 @@
         </div>
       </div>
     </div>
-    <a href="https://github.com/whorunsthecode/shecodesplus-weather-app">
+    <div class ="byKarmen" ><a href="https://github.com/whorunsthecode/shecodesplus-weather-app">
           Open-source code</a
         >
-        <span>by Karmen Yip</span>
+        <span>by <a href ="https://www.linkedin.com/in/karmenyipnm/">Karmen Yip</a></span></div>
+    <br />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
