Changed SUBMIT button into Search button

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 aria-label="Search" 
                 id="city-input"
                 >  
-            <button type="submit" class="button-8" role="button">SUBMIT</button>
+            <button type="submit" class="button-8" role="button">Search</button>
            <span class="msg"></span> &nbsp;    
             <div class="current-city">
               <button id="current-city" type="button" class="button-26" >Current</button>
