--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <img class="bigsymbol-img" src="https://raw.githubusercontent.com/basmilius/weather-icons/87a143a3ca6a50d8e9cbd0f38eb3f31d7cf48053/design/fill/final/clear-day.svg"></i>
           </div>
       
-         <div> <span class="large-font" id="current-temperature">29</span><span class="units"><span class="Celsius-units"><a href="#" id="Celsius">°C</a></span> | <span id="Fahrenheit-units"><a href="#" id="Fahrenheit">F</a></span></span></div>
+         <div> <span class="large-font" id="current-temperature">29</span><span class="units"><span class="Celsius-units"><a href="#" id="Celsius">°C</a></span> | <span id="Fahrenheit-units"><a href="#" id="Fahrenheit">°F</a></span></span></div>
           <br /><div class="row d-flex px-3 mt-auto">
             <div class="d-flex flex-column block first-block">
               <small class="text-muted mb-0">MON</small>
