--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
             </div>
           </form>
           <br />
-         <span style="float: left;">
-            <img class="bigsymbol-img" src="https://raw.githubusercontent.com/basmilius/weather-icons/87a143a3ca6a50d8e9cbd0f38eb3f31d7cf48053/design/fill/final/clear-day.svg"></i>
-         <h4 class="mb-0" id="city-name">Hong Kong</h4>
-          <small class="text-muted mb-3" id="current-date">Sunday 15:32</small></span>
 
+         <h4 class="mb-0" id="city-name">Hong Kong</h4>
+          <small class="text-muted mb-3" id="current-date">Sunday 15:32</small>
+         <span style="float: left;">
+            <img class="bigsymbol-img" src="https://raw.githubusercontent.com/basmilius/weather-icons/87a143a3ca6a50d8e9cbd0f38eb3f31d7cf48053/design/fill/final/clear-day.svg"></i></span>
           <div>
             <span class="large-font" id="current-temperature">29</span
             ><span class="units"
               ><span class="Celsius-units"
-                ><a href="#" id="Celsius">°C</a></span
+                ><a href="#" id="Celsius" class="celsius-link">°C</a></span
               >
               |
               <span id="Fahrenheit-units"
