Remove weather forecast code for week 7 hw

--- a/index.html
+++ b/index.html
@@ -63,65 +63,12 @@
               ></span
             >
           </div>
-          <br />
-          <div class="row d-flex px-3 mt-auto">
-            <div class="d-flex flex-column block first-block">
-              <small class="text-muted mb-0">MON</small>
-              <div class="text-center">
-                <img
-                  class="symbol-img"
-                  src="https://raw.githubusercontent.com/basmilius/weather-icons/87a143a3ca6a50d8e9cbd0f38eb3f31d7cf48053/design/fill/final/clear-day.svg"
-                />
-              </div>
-              <h6><strong>30&#176;</strong></h6>
-            </div>
-            <div class="d-flex flex-column block">
-              <small class="text-muted mb-0">TUE</small>
-              <div class="text-center">
-                <img
-                  class="symbol-img"
-                  src="https://raw.githubusercontent.com/basmilius/weather-icons/87a143a3ca6a50d8e9cbd0f38eb3f31d7cf48053/design/fill/final/rain.svg"
-                />
-              </div>
-              <h6><strong>29&#176;</strong></h6>
-            </div>
-            <div class="d-flex flex-column block active">
-              <small class="text-muted mb-0">WED</small>
-              <div class="text-center">
-                <img
-                  class="symbol-img"
-                  src="https://raw.githubusercontent.com/basmilius/weather-icons/87a143a3ca6a50d8e9cbd0f38eb3f31d7cf48053/design/fill/final/cloudy.svg"
-                />
-              </div>
-              <h6><strong>28&#176;</strong></h6>
-            </div>
-            <div class="d-flex flex-column block">
-              <small class="text-muted mb-0">THU</small>
-              <div class="text-center">
-                <img
-                  class="symbol-img"
-                  src="https://raw.githubusercontent.com/basmilius/weather-icons/87a143a3ca6a50d8e9cbd0f38eb3f31d7cf48053/design/fill/final/partly-cloudy-day.svg"
-                />
-              </div>
-              <h6><strong>29&#176;</strong></h6>
-            </div>
-            <div class="d-flex flex-column block last-block">
-              <small class="text-muted mb-0">FRI</small>
-              <div class="text-center">
-                <img
-                  class="symbol-img"
-                  src="https://raw.githubusercontent.com/basmilius/weather-icons/87a143a3ca6a50d8e9cbd0f38eb3f31d7cf48053/design/fill/final/clear-day.svg"
-                />
-              </div>
-              <h6><strong>29&#176;</strong></h6>
-            </div>
-          </div>
-        </div>
-      </div>
+          <br  />
+         
     </div>
     <div class="byKarmen">
       <a href="https://github.com/whorunsthecode/shecodesplus-weather-app">
-        Open-source code</a
+        <br  />Open-source code</a
       >
       <span
         >by
