--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </form>
             <br /> <br />
             <div class="current-city">
-              <button id="current-city" type="button" class="button-21" role="button">
+              <button id="current-city" type="button" class="button-21 justify-content-center" role="button">
                 Your current location 📍
               </button>
             </div>
