Added images folder

--- a/index.html
+++ b/index.html
@@ -145,6 +145,6 @@ wind speed: <span class="current-wind">8 m/h</span>
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
       crossorigin="anonymous"
     ></script>
-    <script src="src/index.js"></script>
+    <script src="src/app.js"></script>
   </body>
 </html>
