Deleted unnecessary classes and put the C/F symbols at the right place.

--- a/index.html
+++ b/index.html
@@ -58,16 +58,12 @@
             <div class="current-condition-text-wrapper">
           <span class="current-condition-text"></span>
         </div>
-        <div class="current-temp-container"> 
-            <span class="large-font" id="current-temperature">29</span
-            ><span class="units"
-              ><span class="Celsius-units"
-                ><a href="#" id="Celsius" class="celsius-link">°C</a></span
-              >
-              <span id="Fahrenheit-units"
-                ><a href="#" id="Fahrenheit" class="active-link fahrenheit-link">°F</a></span
-              ></span
-            >
+        <div class="current-temp-container "> 
+            <span class="large-font" id="current-temperature"></span
+            ><span class="units d-flex"
+                >
+              <a href="#" id="Celsius" class="celsius-link d-flex">°C</a>
+                <a href="#" id="Fahrenheit" class="active-link fahrenheit-link d-flex">°F</a></span>
              </div>
      <div class="windspeed">
 wind speed: <span class="current-wind">8 m/h</span>
