--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <button id="current-city" type="button" class="button-21" role="button">
                 Your current location 📍
               </button>
-            </div><br />
+            </div>
          <h4 class="mb-0 font-weight-bold" id="city-name">Hong Kong</h4>
           <small class="text-muted " id="current-date">Sunday 15:32</small>
         <div class="current-condition-text-wrapper">
@@ -54,17 +54,14 @@
         </div> 
 
         <div>
-            <img style="padding: 0" id="icon" class="bigsymbol-img" src="images/01d.svg" alt="clear day"></i></div>
-            <div class="current-condition-text-wrapper">
-          <span class="current-condition-text"></span>
-        </div>
-        <div class="current-temp-container "> 
+            <img id="icon" class="bigsymbol-img" src="images/01d.svg" alt="clear day"></i></div>
+        <div class="current-temp-container"> 
             <span class="large-font" id="current-temperature"></span
             ><span class="units d-flex"
                 >
               <a href="#" id="Celsius" class="celsius-link d-flex">°C</a>
                 <a href="#" id="Fahrenheit" class="active-link fahrenheit-link d-flex">°F</a></span>
-             </div>
+             </div><br />
      <div class="windspeed">
 wind speed: <span class="current-wind">8 m/h</span>
   </div>
@@ -130,14 +127,14 @@ wind speed: <span class="current-wind">8 m/h</span>
     </div>
     <div class="byKarmen">
       <a href="https://github.com/whorunsthecode/shecodesplus-weather-app" class="footer">
-        <br  />Open-source code</a
+      Open-source code</a
       >
       <span
         >by
         <a href="https://www.linkedin.com/in/karmenyipnm/" class="footer">Karmen Yip</a></span
       >
     </div>
-    <br />
+<br /> <br />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
