Added bootstrap container for C/F elements

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <div>
             <img id="icon" class="bigsymbol-img" src="images/01d.svg" alt="clear day"></i></div>
         <div class="current-temp-container d-flex"> 
-            <span class="large-font" id="current-temperature"></span
-            ><span class="units d-flex"
+            <span class="large-font" id="current-temperature">28</span
+            ><span class="units d-flex container"
                 >
               <a href="#" id="Celsius" class="celsius-link d-flex">°C</a>
                 <a href="#" id="Fahrenheit" class="active-link fahrenheit-link d-flex">°F</a></span>
