Added line between wind speed and forecast

--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
      <div class="windspeed">
 wind speed: <span class="current-wind">8 m/h</span>
   </div>
-          <br  />
-           <div id="forecast"></div></div>
+          <br  /><div class="line-break"></div>
+           <div id="forecast"></div>         <br /></div>
+  
     <div class="byKarmen">
       <a href="https://github.com/whorunsthecode/shecodesplus-weather-app" class="footer">
       Open-source code</a
