Fixed search engine+button align bug

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <button type="submit" class="button-8" role="button">Search</button>
       </form>
     <div class="container px-1 px-sm-4 py-2 mx-auto">
-      <div class="row d-flex justify-content-center px-1 px-sm-4  mx-auto">
+      <div class="row d-flex justify-content-center  mx-auto">
         <div class="card text-center pt-2 border-0">      
            <div class="current-city">
               <button id="current-city" type="button" class="button-21" role="button">
